Bug fix in alignment of title and button in section creations

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,8 +124,7 @@ nav ul {
 }
 
 .cards {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 20px;
   margin-bottom: 30px;
 }
@@ -262,10 +261,31 @@ nav ul {
   color: hsl(228, 45%, 44%);
 }
 
+@media (min-width: 600px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media (min-width: 1200px) {
   nav ul {
     display: flex;
     gap: 20px;
+  }
+
+  nav ul li a {
+    position: relative;
+    transition: all 0.3s ease;
+  }
+
+  nav ul li a:hover::after {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    background: #fff;
+    position: absolute;
+    bottom: -7px;
   }
 
   #home {
@@ -307,9 +327,33 @@ nav ul {
     display: none;
   }
 
+  /* Creations */
+  #creations .container {
+    display: grid;
+    grid-template-areas:
+      'header button'
+      'content content';
+    align-items: center;
+    gap: 19px;
+    justify-content: space-between;
+  }
+
+  #creations .title {
+    text-align: left;
+    grid-area: header;
+    margin-bottom: 0;
+  }
+
+  .button {
+    justify-self: end;
+    grid-area: button;
+    margin: 0;
+  }
+
   .cards {
-    flex-direction: row;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(4, 1fr);
+    grid-area: content;
+    gap: 32px;
   }
 
   .card {
